decal-macros/tests/ui/exm.rs
use decal_macros::decal;

fn main() {
    let elem = decal! { Row {} };
}